Reajustando a classe veiculo